add feature informar ocorrência and listar ruas perigosas

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=""
+BOT_TOKEN=
+API_URL=https://api.telegram.org/bot 
+API_FILE_URL=https://api.telegram.org/file/bot
+ID_USER=
+BASE_URL=http://viacep.com.br/ws
+API_TOKEN=
