--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --inspect --watch src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
     "@prisma/client": "^5.4.1",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
-    "telegraf": "^4.14.0"
+    "telegraf": "^4.14.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "prisma": "^5.4.1"
